@@ -2,8 +2,7 @@
 <html>
  <head>
   <title>YaCy '#[clientname]#': Search Page</title>
-         #%env/templates/metas.template%#
-   <link rel="alternate" type="application/rss+xml" title="Search for #[former]#" href="index.rss?search=#[former]#">
+  #%env/templates/metas.template%#
  </head>
  <body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
 #%env/templates/header.template%#
