@@ -1,30 +1,0 @@
-<?xml version="1.0"?>
-<?xml-stylesheet type='text/xsl' href='/index.xsl' version='1.0'?>
-<rss version="2.0" xmlns:yacyTopwords="http://www.yacy.net/yacy/topwords">
-	<channel>
-		<title>Search for #[former]#</title>
-		<description>Search for #[former]#</description>
-		<image>
-			<url>#[rssYacyImageURL]#</url>
-			<title>Search for #[former]#</title>
-		</image>
-		#{results}#
-		<item>
-			<title>#[description]#</title>
-			<link>#[url]#</link>
-                        #(snippet)#::<description>#[text]#</description>#(/snippet)#
-			<pubDate>#[date]#</pubDate>
-		</item>
-		#{/results}#
-        <yacyTopwords:topwords>
-            #(combine)#
-            ::
-            #{words}#
-            <yacyTopwords:item>
-                <yacyTopwords:word>#[word]#</yacyTopwords:word>
-            </yacyTopwords:item>
-            #{/words}#
-            #(/combine)#
-        </yacyTopwords:topwords>
-	</channel>
-</rss>
