@@ -1,26 +1,0 @@
-<?xml version="1.0"?>
-<yacySearch>
-	<yacySearchResult>	
-		<title>Search for #[former]#</title>
-		<description>Search for #[former]#</description>
-		
-		<totalResultCount>#[totalcount]#</totalResultCount>
-		<currentResultCount>#[linkcount]#</currentResultCount>
-		
-		<searchTips>
-		#(combine)#::		
-		#{words}#<searchTip query="#[newsearch]#">#[word]#</searchTip>#{/words}#
-		#(/combine)#
-		</searchTips>				
-		
-		#{results}#
-		<yacySearchResultItem>
-			<description>#[description]#</description>
-			<link>#[url]#</link>
-			<linkName>#[urlname]#</linkName>
-			<date>#[date]#</date>
-			<size>#[size]#</size>
-		</yacySearchResultItem>
-		#{/results}#
-	</yacySearchResult>
-</yacySearch>
