@@ -1,67 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
-<html>
-<head>
-<title>YaCy '#[clientname]#': Search Page</title>
-#%env/templates/metas.template%#
-<link rel="alternate" type="application/rss+xml" title="Search for #[former]#" href="index.rss?search=#[former]#">
-</head>
-<body>
-<div align="center">
-<img src="/env/grafics/kaskelix.png"><br><b>P2P WEB SEARCH</b>
-<form action="simple_search.html" method="GET">
-<input type="text" name="search" value="#[former]#" maxlength="80"><br><input type="submit" name="Enter" value="Search"><br><br>
-Max. number of results:
-<select NAME="count">
-<option #(count-10)#::selected#(/count-10)#>10</option>
-<option #(count-50)#::selected#(/count-50)#>50</option>
-<option #(count-100)#::selected#(/count-100)#>100</option>
-<option #(count-1000)#::selected#(/count-1000)#>1000</option>
-</select>
-</form>
-</div>
-
-#(num-results)#
-::
-No Results.
-::
-No Results. (length of search words must be at least 3 characters)
-::
-<p>No Results. If you think this is unsatisfactory then you may consider to support
-the global index by running your own proxy/peer.
-If everybody contributes, the results will get better.</p>
-<p>Other possible reasons for no result:<br>
-<ul>
-<li>The search time was too short. Search again with same query to catch up 'late peers'</li>
-<li>There is currently no support for german umlaute. Please use ae/oe/ue instead</li>
-<li>Words of length < 3 are not indexed. Please omit such words</li>
-<li>YaCy tries to index singular instead of plural words. Please use the singular form</li>
-<li>Only complete words are indexed, not parts of words</li>
-<li>Don't use stopwords as search words</li>
-<li>During this test phase the reaction time of remote peers is unknown.
-Please repeat your search to see if there are late-responses from remote peers</li>
-</ul></p>
-<p>If you think the information you searched should exist in the global index,
-then please run your own peer and start a crawl of your wanted information to make it
-available for everyone. Then stay online to support crawls from other peers. Thank you!</p>
-::
-#[linkcount]# results from a total number of #[totalcount]# known links.
-You can try to
-<a href="/simple_search.html?search=#[former]#&Enter=Search&count=#[count]#&order=#[order]#&resource=#[resource]#&time=#[time]#&urlmaskfilter=.*">catch up more links</a>
-from 'late' peers to enrich this search result.
-#(/num-results)#
-<p>
-<!-- linklist begin -->
-
-#{results}#
-<!-- link begin -->
-<p><b>
-#[description]#
-</b><br>
-<a href="#[url]#">#[urlname]#</a><br>
-#[date]#<br></p>
-<!-- link end -->
-#{/results}#
-
-<!-- linklist end -->
-</body>
-</html>
