@@ -1,149 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
-<html>
- <head>
-  <title>YaCy '#[clientname]#': Result Page</title>
-         #%env/templates/metas.template%#
-   <link rel="alternate" type="application/rss+xml" title="Search for #[former]#" href="index.rss?search=#[former]#">
-   
- <script src="/js/ajax.js"></script>
-  <script src="/js/xml.js"></script>   
- <script src="/js/Index.js"></script>   
-   
- </head>
- <body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
-#%env/templates/header.template%#
-
-  <SCRIPT LANGUAGE="JavaScript">
-picEmpty = new Image(11, 11);
-picEmpty.src = "/env/grafics/empty.gif";
-picMinus = new Image(11, 11);
-picMinus.src = "/env/grafics/minus.gif";
-picPlus = new Image(11, 11);
-picPlus.src = "/env/grafics/plus.gif";
-  </SCRIPT>
-
-  <form action="websearch.html" method="get">
-  <center>
-  <p>
-  <table border="0" cellspacing="0" cellpadding="0">
-   <tr>
-   <td rowspan="2">
-   <img border="0" src="/env/grafics/yacy.png" align="top">
-    </td>
-    <td rowspan="2" width="5px"></td>
-    <td align="center"><h2><font color="#212942" face="Helvetica, Arial" size="2">P2P WEB SEARCH</font></h2></td>
-    <td rowspan="2" width="5px">
-	</td>
-	<td>&nbsp;</td>
-	</tr>
-	<tr>
-	<td>
-     <input name="search" type="text" size="52" maxlength="80" value="#[former]#">
-    </td>
-	<td>
-     <input type="submit" name="Enter" value="Search">
-    </td>
-	</tr>
-   </table>
-   
-  </center>
-  </form>
-  </p>
-  
-  <hr>
-  
- <p>
-#(excluded)#
-::
-<b>The following words are stop-words and had been excluded from the search: #[stopwords]#.</b>
-#(/excluded)#
-#(num-results)#
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-::
-No Results.
-::
-No Results. (length of search words must be at least 3 characters)
-::
-<p>No Results. If you think this is unsatisfactory then you may consider to support the global index by running your own proxy/peer.
-If everybody contributes, the results will get better.</p>
-<p>Other possible reasons for no result:<br>
-<ul>
-<li>The search time was too short. Search again with same query to catch up 'late peers'</li>
-<li>There is currently no support for german umlaute. Please use ae/oe/ue instead</li>
-<li>Words of length < 3 are not indexed. Please omit such words</li>
-<li>YaCy tries to index singular instead of plural words. Please use the singular form</li>
-<li>Only complete words are indexed, not parts of words</li>
-<li>Don't use stopwords as search words</li>
-<li>During this test phase the reaction time of remote peers is unknown.
-Please repeat your search to see if there are late-responses from remote peers</li>
-</ul></p>
-<p>If you think the information you searched should exist in the global index,
-then please run your own peer and start a crawl of your wanted information to make it
-available for everyone. Then stay online to support crawls from other peers. Thank you!</p>
-::
-<b>#[linkcount]#</b> results from <b>#[orderedcount]#</b> ordered links of a total number of <b>#[totalcount]#</b> known.
-&rarr; <a href="/websearch.html?search=#[former]#&Enter=Search&count=#[count]#&order=#[order]#&resource=#[resource]#&time=#[time]#&urlmaskfilter=.*">Catch up more links</a>
-from 'late' peers.
-#(/num-results)#
-#(combine)#
-::
-<br><br><b>Topwords</b> (to refine search):
-#{words}#
-<a href="websearch.html?search=#[newsearch]#&Enter=Search&count=#[count]#&order=#[order]#&resource=#[resource]#&time=#[time]#">#[word]#</a>
-#{/words}#
-#(/combine)#
-</p>
-<!-- linklist begin -->
-
-#{results}#
-<!-- link begin -->
-<p style="border-bottom:1px #000 dashed; padding-bottom: 1em;">
-<a href="/Bookmarks_p.html?edit=#[urlhash]#" onMouseover="document.plus_#[urlhexhash]#.src=picPlus.src" onMouseout="document.plus_#[urlhexhash]#.src=picEmpty.src">
-<img src="/env/grafics/empty.gif" title="bookmark" alt="bookmark" name="plus_#[urlhexhash]#" border="0"></a>
-<span class="ResultDescription">#[description]#</span><br>
-<a href="#[delete]#" onMouseover="document.minus_#[urlhexhash]#.src=picMinus.src" onMouseout="document.minus_#[urlhexhash]#.src=picEmpty.src">
-<img src="/env/grafics/empty.gif" title="delete" alt="delete" name="minus_#[urlhexhash]#" border="0"></a>
-<span class="#(snippet)#snippetLoading::snippetLoaded#(/snippet)#" id="#[urlhash]#">#(snippet)#loading snippet ...::#[text]##(/snippet)#</span><br>
-<img src="/env/grafics/empty.gif" border="0">&nbsp;<a id="url#[urlhash]#" href="#[url]#">#[urlname]#</a><br>
-<img src="/env/grafics/empty.gif"><span class="ResultDateYBR">&nbsp;#[date]#</span> | <span class="ResultDateYBR">YBR-#[ybr]#</span> | <a href="ViewFile.html?urlHash=#[urlhash]#&words=#[words]#">Info</a><br>
-</p>
-<!-- link end -->
-#{/results}#
-
-<!-- linklist end -->
-<p>
-#(resultbottomline)#
-::
-The global search resulted in #[globalresults]# link contributions from other YaCy peers.
-::
-You can enrich the search results by using the 'global' option: This will search also other YaCy peers
-::
-You cannot get global search results because you are not connected to another YaCy peer.
-To connect you must first use the proxy.
-See here for an <a href="http://www.anomic.de/AnomicHTTPProxy/Installation.html#wininst">installation guide</a>.
-Alternatively, you can run the proxy in permanent online mode, which also grants global search.
-To do this, press this button:
-<form action="SettingsAck_p.html" method="get">
-<input type="submit" name="pmode" value="go online">
-</form>
-::
-You can enrich the search results by using the 'global' option; you must also switch to online mode
-(by using the proxy) to contribute to the global index.
-#(/resultbottomline)#
-</p><br>
-<hr>
-<center><i>YaCy is a GPL'ed project
-with the target of implementing a P2P-based global search engine.<br>
-Architecture (C) by Michael Peter Christen,
-<img src="/env/grafics/mcemailh.gif"></i></center>
-
-#%env/templates/footer.template%#
-
-<script language="JavaScript">
-
-AllSnippets();
-
-</script>
-
-</body>
-</html>
