@@ -3,7 +3,7 @@
  <head>
   <title>YaCy '#[clientname]#': Search Page</title>
          #%env/templates/xhtml-metas.template%#
-   <link rel="alternate" type="application/rss+xml" title="Search for #[former]#" href="index.rss?search=#[former]#" />
+   <link rel="alternate" type="application/rss+xml" title="Search for #[former]#" href="yacysearch.rss?search=#[former]#" />
 
    <script src="/js/ajax.js" type="text/javascript"></script>
    <script src="/js/xml.js" type="text/javascript"></script>
